...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CPV-qA-cPa">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yLJ-VG-gcW">
                                        <rect key="frame" x="20" y="271.5" width="335" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="BMk-xc-IFT"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z8v-Mo-nRx">
                                        <rect key="frame" x="20" y="319.5" width="335" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="ne9-H1-BA7"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                                        </state>
                                        <connections>
                                            <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HcU-ee-Bu4"/>
                                        </connections>
                                    </button>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Message" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Dai-fG-gFe">
                                        <rect key="frame" x="8" y="195" width="359" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                        <color key="textColor" red="0.67889085442128816" green="0.0" blue="0.012586632099438739" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whE-BS-ZcV">
                                        <rect key="frame" x="20" y="223.5" width="335" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="HST-4p-IJy"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <constraint firstAttribute="trailingMargin" secondItem="U7j-Ew-ZeO" secondAttribute="trailing" id="fi3-r2-jgt"/>
                            <constraint firstAttribute="trailingMargin" secondItem="gkQ-Mg-U1o" secondAttribute="trailing" id="uKB-Jg-RM4"/>
                            <constraint firstAttribute="leadingMargin" secondItem="gkQ-Mg-U1o" secondAttribute="leading" id="wY5-uc-vvO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Your Email" id="0mS-Dx-mPj">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="xDS-E6-bs8">
                            <connections>
                                <action selector="dismissView:" destination="7fd-V7-8z7" id="nvr-jZ-Foj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
